# Pico2Seq

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DaisySP_DSP_Modules.md  Pico2Seq.ino  README.md  diagnostic.h  includes.h
.github/workflows/: tests.yml
docs/: Audio-Hot-Path-Optimization-Guide.md  ButtonHandlers.md  LEDMatrix.md  VoiceSystem.md  architecture.md  input-adapters.md  matrix.md  midi.md  oled.md  onboarding.md  scales.md  sensors.md  sequencer-core.md  sequencer.md  testing.md  voice.md
libraries/LEDMatrix/: LEDMatrix.h  library.properties
libraries/Sequencer/: Sequencer.h  library.properties
libraries/UI/: UI.h  library.properties
libraries/Voice/: Voice.h  library.properties
src/LEDMatrix/: LEDConstants.h  LEDController.h  LEDMatrixFeedback.cpp  LEDMatrixFeedback.h  LEDmatrix.cpp  README.md  ledMatrix.h
src/OLED/: oled.cpp  oled.h
src/audio/: audio_i2s.h
src/dsp/: compressor.h  dsp.h  hermDelay.h  ladder.cpp  oscillator.cpp  oscillator.h  smooth.h
src/hardware/: DistanceSensorFallback.cpp  DistanceSensorFallback.h  DistanceSensorModule.cpp  DistanceSensorModule.h  FallbackControlManager.cpp  FallbackControlManager.h  HardwareDetectionManager.cpp  HardwareDetectionManager.h  HardwareModuleDefs.h  HardwareRegistry.cpp  HardwareRegistry.h  IHardwareModule.h  MagneticEncoderFallback.cpp  MagneticEncoderFallback.h  (+8 more)
tests/: CMakeLists.txt
tests/stubs/: Arduino.h  Wire.h
tests/stubs/hardware/: gpio.h
tests/stubs/pico/: sync.h
tests/unit/: test_dsp.cpp  test_helpers.cpp  test_scales.cpp  test_sequencer.cpp  test_voice.cpp
(+91 files in other folders)
